fixed bug with scrollbar on mobile screen

--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -17,6 +17,10 @@ app-contact-me {
     align-items: center;
 }
 
+app-skills {
+    overflow-x: hidden;
+}
+
 app-landing-page {
     margin-bottom: 100px;
     background-image: linear-gradient(to top right, #1C1C1C 45%, #08463B 100%);
